tests/comp/sem/valid/system_out_println.mj
class A {

	public void foo(A a) {
		System.out;
		System.out.println(5);
	}

	public static void main(String[] args) {}

}
