tests/comp/sem/invalid/local_shadow.mj
class A {

	public static void main(String[] args) {
		/*** int foo; ***/
		{
			int foo;
		}
	}

}
